--- a/src/App.scss
+++ b/src/App.scss
@@ -13,3 +13,74 @@
     background-color: white;
     color: black;
   }
+
+  p, h3 {
+    color: black;
+  }
+
+  .recipeCard {
+    
+    min-height: 25rem;
+    border-radius: 2rem;
+    padding-right: 2rem;
+    overflow: hidden;
+    position: relative;
+    color: white;
+    border: 1px solid black;
+  
+}
+
+.recipeCard img {
+  
+    border-radius: 2rem;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+/* .recipeCard p {
+  
+    position: absolute;
+    z-index: 10;
+    left: 50%;
+    bottom: 0%;
+    transform: translate(-50%, 0%);
+    color: white;
+    width: 100%;
+    text-align: center;
+    font-weight: 600;
+    font-size: 2rem;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+} */
+
+.recipeCard a {
+  position:absolute;
+  text-decoration: none;
+  padding: 0.5rem;
+  color: black;
+  cursor: pointer;
+  background-color: white;
+  border-radius: 2rem;
+}
+
+
+
+h2 {
+  margin: 1.5rem;
+  color: black;
+}
+
+.btn {
+  margin: 1.5rem;
+  position: absolute;
+  z-index: 10;
+  background-color: palevioletred;
+}
+
