--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,19 @@
   
 }
 
+h1{
+  font-size: 2em;
+}
+
+
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+
+}
+
 .recipeCards {
 
     margin-left: 2rem;
@@ -76,7 +89,7 @@
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
 } */
 
-.recipes a {
+/* .recipes a {
 
   text-decoration: none;
   padding: 0.5rem;
@@ -88,7 +101,7 @@
   margin-top: 2rem;
 
 }
-
+ */
 
 
 h2 {
@@ -97,9 +110,9 @@ h2 {
 }
 
 .btn {
-  margin: 1.5rem;
-  position: absolute;
-  z-index: 10;
+  //margin: 1.5rem;
+  //position: absolute;
+  //z-index: 10;
   background-color: palevioletred;
 }
 
