Added header, WIP pagination

--- a/src/App.scss
+++ b/src/App.scss
@@ -116,6 +116,13 @@ h2 {
   background-color: palevioletred;
 }
 
+.back-btn {
+  margin: 1.5rem;
+  //position: absolute;
+  //z-index: 10;
+  background-color: palevioletred;
+}
+
 .form-header {
   margin-bottom: 20px;
 }
