--- a/src/App.scss
+++ b/src/App.scss
@@ -157,9 +157,31 @@ h2 {
   margin-top: 20px;
 }
 
+.header-section {
+  background:
+  linear-gradient(rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.8)),
+  url('./assets/hero-bg.jpg');
 
+  background-size: cover;
+  color: white;
+}
 
+.hero-section {
+  background:
+  linear-gradient(rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.8)),
+  url('./assets/hero-bg.jpg');
 
+  background-size: cover;
+  background-position: center;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+}
 
-
-
+.hero-section h1 {
+  font-size: 48px;
+  font-weight: bold;
+}
