--- a/src/App.scss
+++ b/src/App.scss
@@ -157,14 +157,7 @@ h2 {
   margin-top: 20px;
 }
 
-.header-section {
-  background:
-  linear-gradient(rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.8)),
-  url('./assets/hero-bg.jpg');
 
-  background-size: cover;
-  color: white;
-}
 
 .hero-section {
   background:
@@ -172,8 +165,8 @@ h2 {
   url('./assets/hero-bg.jpg');
 
   background-size: cover;
-  background-position: center;
-  height: 400px;
+
+  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -184,4 +177,9 @@ h2 {
 .hero-section h1 {
   font-size: 48px;
   font-weight: bold;
+  padding: 2rem;
+}
+
+.alert {
+  background-color: white;
 }
