--- a/src/App.scss
+++ b/src/App.scss
@@ -113,15 +113,16 @@ h2 {
   //margin: 1.5rem;
   //position: absolute;
   //z-index: 10;
+  cursor: pointer;
   background-color: palevioletred;
+  color:#fff;
 }
 
 .back-btn {
-  margin: 1.5rem;
-  //position: absolute;
-  //z-index: 10;
+  margin: 3rem;
   background-color: palevioletred;
-}
+  color: #fff;
+} 
 
 .form-header {
   margin-bottom: 20px;
@@ -146,11 +147,13 @@ h2 {
 
 .form-submit-btn {
   padding: 10px 20px;
-  background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  padding: 10px 20px;
+  font-size: 16px;
+
 }
 
 .form-alert {
@@ -175,11 +178,50 @@ h2 {
 }
 
 .hero-section h1 {
-  font-size: 48px;
+  font-size: 2rem;
   font-weight: bold;
   padding: 2rem;
 }
 
 .alert {
   background-color: white;
+}
+
+/* Add these styles to your CSS file or inline styles */
+.form-header {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-input {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+
+/*  media queries for responsiveness */
+@media (min-width: 768px) {
+  /* Desktop view */
+  .form-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .form-input {
+    flex: 1;
+    margin: 0 5px;
+  }
+
+  .btn {
+    flex: 1;
+  }
 }
