--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@
 
   .recipeCard {
    margin-left: 2rem;
-    height: 75vh;
+    //height: 75vh;
     width: 75vw;
     border-radius: 2rem;
     //padding-right: 2rem;
