Moved button singleRecipe

--- a/src/App.scss
+++ b/src/App.scss
@@ -60,7 +60,7 @@ form {
      overflow: hidden;
      position: relative;
      color: white;
-     border: 1px solid black;
+     //border: 1px solid black;
    
  
 }
