--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,7 @@
     width: 75vw;
     height: auto;
     border-radius: 2rem;
+    border: none;
     //padding-right: 2rem;
     //overflow: hidden;
     position: relative;
