--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,7 @@
     //height: 75vh;
     width: 75vw;
     height: auto;
-    border-radius: 2rem;
+    //border-radius: 2rem;
     border: none;
     //padding-right: 2rem;
     //overflow: hidden;
