--- a/src/App.scss
+++ b/src/App.scss
@@ -26,17 +26,20 @@
 
   .recipeCard {
    margin-left: 2rem;
-    //height: 75vh;
     width: 75vw;
     height: auto;
-    //border-radius: 2rem;
     border: none;
-    //padding-right: 2rem;
-    //overflow: hidden;
     position: relative;
     color: white;
-    //border: 1px solid black;
+
   
+}
+
+.category-card  {
+  border: none;
+  margin-left: 2rem;
+  margin-right: 2rem;
+ 
 }
 
 .card-img {
@@ -63,11 +66,10 @@ form {
      height: 50vh;
      width: auto;
      border-radius: 2rem;
-     //padding-right: 2rem;
      overflow: hidden;
      position: relative;
      color: white;
-     //border: 1px solid black;
+
    
  
 }
@@ -83,39 +85,6 @@ form {
 
 }
 
-/* .recipeCard p {
-  
-    position: absolute;
-    z-index: 10;
-    left: 50%;
-    bottom: 0%;
-    transform: translate(-50%, 0%);
-    color: white;
-    width: 100%;
-    text-align: center;
-    font-weight: 600;
-    font-size: 2rem;
-    height: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-} */
-
-/* .recipes a {
-
-  text-decoration: none;
-  padding: 0.5rem;
-  border: 1px solid black;
-  color: black;
-  cursor: pointer;
-  background-color: white;
-  border-radius: 2rem;
-  margin-top: 2rem;
-
-}
- */
-
 
 h2 {
   margin: 1.5rem;
@@ -123,9 +92,7 @@ h2 {
 }
 
 .btn {
-  //margin: 1.5rem;
-  //position: absolute;
-  //z-index: 10;
+
   cursor: pointer;
   background-color: palevioletred;
   color:#fff;
@@ -144,7 +111,7 @@ h2 {
 .form-container {
   display: flex;
   flex-direction: column;
-  max-width: 400px;
+  //max-width: 400px;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
@@ -204,17 +171,13 @@ h2 {
   background-color: white;
 }
 
-/* Add these styles to your CSS file or inline styles */
+
 .form-header {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
 }
 
-.form-container {
-  display: flex;
-  flex-direction: column;
-}
 
 .form-input {
   margin-bottom: 10px;
@@ -224,8 +187,9 @@ h2 {
   font-size: 16px;
 }
 img.card-img-top {
- height: 200px;
-  width: 250px;
+ max-height: 170px;
+ width: auto;
+
 }
 
 
@@ -234,10 +198,6 @@ img.card-img-top {
 /*  media queries for responsiveness */
 @media (min-width: 768px) {
   /* Desktop view */
-  .form-container {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
 
   .form-input {
     flex: 1;
@@ -247,9 +207,11 @@ img.card-img-top {
   .btn {
     flex: 1;
   }
+
+
 }
 
-@media (max-width: 566px) {
+@media (max-width: 762px) {
   img.card-img-top {
     width: 100%;
     height: auto;
